--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
 
 .container {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     width: 100vw;
