--- a/style.css
+++ b/style.css
@@ -12,6 +12,11 @@ body {
                 inset -9px -9px 18px #ff7a7a;
 }
 
+@font-face {
+    font-family: main;
+    src: url(fonts/Orbitron-VariableFont_wght.ttf);
+}
+
 .container {
     display: flex;
     flex-direction: column;
@@ -35,12 +40,23 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    /* border-radius: 10px; */
-    border: solid 2.5px #FFF5E0;
+    border: solid 2.5px #fff5e0c3;
     background: #141E46;
     box-shadow: inset 9px 9px 18px #11193b,
             inset -9px -9px 18px #172351;
+    border-radius: 6px;
+}
+
+.displays,
+.marker-field {
+    font-family: main;
     color: white;
-    font-size: 2em;
+    font-size: 2.6em;
     font-weight: 700;
+}
+
+#turnDisplayer,
+.displays {
+    font-size: 1.5em;
+    margin-bottom: 20px;
 }
